--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,11 @@
-<div>This is X.com block affiliate</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div>This is X.com block keywords</div>
+  </body>
+</html>
