--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
 
       <div>
         <h4>Total Post Blocked</h4>
-        <h1 id="blockedCount"></h1>
+        <h1 id="blockedCount">0</h1>
       </div>
 
       <div class="form-parent">
