--- a/popup.html
+++ b/popup.html
@@ -3,41 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+    <title>Popup</title>
   </head>
-  <body>
-    <div>
-      <h2>Twitter Block Keywords</h2>
 
-      <div>
-        <h4>Total Post Blocked</h4>
-        <h1 id="blockedCount">0</h1>
+  <body class="text-sm text-gray-700">
+    <div class="divide-y" style="min-width: 300px">
+      <div class="flex items-center justify-center gap-3 py-2">
+        <img src="./icons/icon32.png" alt="logo" class="w-6 h-6" />
+        <p class="text-medium text-center whitespace-nowrap font-medium">Twitter Block Keywords</p>
       </div>
 
-      <div class="form-parent">
-        <input id="isActive" type="checkbox" />
-        <label for="isActive">Active</label>
+      <div class="flex justify-center items-center flex-col py-2 px-4 gap-1">
+        <h1 id="blockedCount" class="text-3xl font-semibold">0</h1>
+        <p class="text-sm">Total Post Blocked</p>
       </div>
 
-      <div id="childConfig">
-        <div class="form-group">
-          <input id="isBlockAd" type="checkbox" />
-          <label for="isBlockAd">Block Ads</label>
+      <div class="p-2 px-4">
+        <p class="uppercase text-gray-400">Configuration</p>
+        <div class="flex items-center gap-2 mt-2">
+          <input id="isActive" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-lg" />
+          <label for="isActive" class="ms-2 text-sm font-medium text-gray-900">Extension Active</label>
+        </div>
+      </div>
+
+      <div id="childConfig" class="divide-y">
+        <div class="flex flex-col gap-2 p-2 px-4">
+          <div class="flex items-center gap-2">
+            <input
+              id="isBlockAd"
+              type="checkbox"
+              class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-lg"
+            />
+            <label for="isBlockAd" class="ms-2 text-sm font-medium text-gray-900">Block Ads</label>
+          </div>
+
+          <div class="flex items-center gap-2">
+            <input id="verbose" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-lg" />
+            <label for="verbose" class="ms-2 text-sm font-medium text-gray-900">Verbose (will show log)</label>
+          </div>
         </div>
 
-        <div class="form-group">
-          <input id="verbose" type="checkbox" />
-          <label for="verbose">Verbose</label>
-        </div>
-
-        <br /><br />
-        <div class="form-group">
-          <p>Blocked Keyword List</p>
-          <div id="keywordContainer"></div>
-          <br />
-          <form id="newKeywordForm">
-            <input type="text" name="keyword" placeholder="add new blocked keyword" />
-            <button type="submit">Add</button>
+        <div class="form-group flex flex-col">
+          <p class="uppercase text-gray-400 p-4 py-2">Blocked Keywords</p>
+          <div id="keywordContainer" class="flex flex-col gap-2 bg-gray-100 p-2 h-36 overflow-y-auto"></div>
+          <form id="newKeywordForm" class="flex gap-2 justify-between p-4">
+            <input
+              type="text"
+              class="p-2 border border-2 outline-none rounded-lg w-full"
+              name="keyword"
+              placeholder="Add Blocked Keyword"
+            />
+            <button type="submit" class="bg-blue-400 p-1 px-2 rounded-lg text-white w-fit">Add</button>
           </form>
         </div>
       </div>
