--- a/popup.html
+++ b/popup.html
@@ -40,7 +40,7 @@
 
           <div class="flex items-center gap-2">
             <input id="verbose" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-lg" />
-            <label for="verbose" class="ms-2 text-sm font-medium text-gray-900">Verbose (will show log)</label>
+            <label for="verbose" class="ms-2 text-sm font-medium text-gray-900">Verbose (will show browser log)</label>
           </div>
         </div>
 
@@ -52,7 +52,7 @@
               type="text"
               class="p-2 border border-2 outline-none rounded-lg w-full"
               name="keyword"
-              placeholder="Add Blocked Keyword"
+              placeholder="New Blocked Keyword"
             />
             <button type="submit" class="bg-blue-400 p-1 px-2 rounded-lg text-white w-fit">Add</button>
           </form>
