chore: change text

--- a/popup.html
+++ b/popup.html
@@ -23,12 +23,12 @@
     <div class="divide-y" style="min-width: 300px">
       <div class="flex items-center justify-center gap-3 py-2">
         <img src="./icons/icon32.png" alt="logo" class="w-6 h-6" />
-        <p class="text-medium text-center whitespace-nowrap font-medium">Twitter Block Keywords</p>
+        <p class="text-medium text-center whitespace-nowrap font-medium">X.com Block Keywords</p>
       </div>
 
       <div class="flex justify-center items-center flex-col py-2 px-4 gap-1">
         <h1 id="blockedCount" class="text-3xl font-semibold">0</h1>
-        <p class="text-sm">Total Post Blocked</p>
+        <p class="text-sm">Tweet Blocked</p>
       </div>
 
       <div class="p-2 px-4">
